@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.deccandelight"
-version="1.1.3"
+version="1.1.4"
 name="Deccan Delight"
 provider-name="Gujal">
 <requires>
