@@ -1,3 +1,8 @@
+[B]Version 1.1.4 - 19 Mar 2017[/B]
+- Mersalaayitten Domain change
+- Enable Mersalaayitten HD by default
+- User can disable Mersalaayitten HD in settings if bandwidth is limited
+
 [B]Version 1.1.3 - 5 Mar 2017[/B]
 - Andhra Watch new scraper
 
